--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences:
   flutter_barcode_scanner: ^2.0.0
   get:
+  intl: ^0.17.0
   fluttertoast: ^8.0.9
   dio: any
   flutter_svg: ^1.0.3
